--- a/fastTable/DemoList/FastTableView/headcell.xib
+++ b/fastTable/DemoList/FastTableView/headcell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dzw-jq-fpK">
@@ -67,12 +65,22 @@
                             <constraint firstAttribute="width" constant="8" id="uGZ-7m-51K"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="klw-Zb-PnS">
+                        <rect key="frame" x="0.0" y="78" width="375" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="nt0-oR-bk6"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="klw-Zb-PnS" secondAttribute="trailing" id="L2O-PG-ajn"/>
                     <constraint firstItem="4HY-UO-VfS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="31" id="Lb2-vL-Fqf"/>
                     <constraint firstItem="mHr-kC-rBf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="N9p-43-gQf"/>
+                    <constraint firstItem="klw-Zb-PnS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="RsF-Q9-f1G"/>
                     <constraint firstItem="mHr-kC-rBf" firstAttribute="leading" secondItem="Dzw-jq-fpK" secondAttribute="trailing" constant="15" id="Uep-Cf-6nK"/>
                     <constraint firstItem="lio-ez-U4m" firstAttribute="top" secondItem="mHr-kC-rBf" secondAttribute="bottom" constant="10" id="dWk-fG-jab"/>
+                    <constraint firstAttribute="bottom" secondItem="klw-Zb-PnS" secondAttribute="bottom" constant="1" id="fff-qE-y4R"/>
                     <constraint firstItem="lio-ez-U4m" firstAttribute="leading" secondItem="Dzw-jq-fpK" secondAttribute="trailing" constant="15" id="hIg-W6-NlK"/>
                     <constraint firstAttribute="trailing" secondItem="4HY-UO-VfS" secondAttribute="trailing" constant="20" id="rc7-WY-Vsy"/>
                     <constraint firstItem="Dzw-jq-fpK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="xtU-eZ-GIz"/>
