--- a/fastTable/ViewController.xib
+++ b/fastTable/ViewController.xib
@@ -51,12 +51,25 @@
                         <action selector="WebDemo:" destination="-1" eventType="touchUpInside" id="EAz-kM-Rs5"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22K-3w-XEj">
+                    <rect key="frame" x="130.5" y="177" width="153" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="153" id="HMu-jT-X43"/>
+                        <constraint firstAttribute="height" constant="30" id="khO-vA-U6Q"/>
+                    </constraints>
+                    <state key="normal" title="快速构建tableview"/>
+                    <connections>
+                        <action selector="fastTableview:" destination="-1" eventType="touchUpInside" id="ohF-ND-ofT"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
+                <constraint firstItem="22K-3w-XEj" firstAttribute="top" secondItem="069-Hk-wjC" secondAttribute="bottom" constant="8" id="1NM-16-azX"/>
                 <constraint firstItem="069-Hk-wjC" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="HKR-Dt-CbG"/>
                 <constraint firstItem="069-Hk-wjC" firstAttribute="top" secondItem="5sx-CH-hWh" secondAttribute="bottom" constant="15" id="dmw-FN-Wuu"/>
                 <constraint firstItem="5sx-CH-hWh" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="iRu-1v-3qV"/>
+                <constraint firstItem="22K-3w-XEj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="npG-2o-mUC"/>
                 <constraint firstItem="5sx-CH-hWh" firstAttribute="top" secondItem="YQy-7R-y5y" secondAttribute="bottom" constant="20" id="r1H-0Z-dcj"/>
                 <constraint firstItem="YQy-7R-y5y" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="xrY-yR-f8M"/>
                 <constraint firstItem="YQy-7R-y5y" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="yIU-5e-0W5"/>
